<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:showIn="@layout/register"
    tools:context=".Register"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:orientation="vertical"
    android:layout_alignParentBottom="true"
    >
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="5dp"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:id="@+id/content_register"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#61616161"
                android:focusable="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Full_name"
                    android:textColor="@color/textcolor" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/input_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Gender"
                android:textColor="@color/colorPrimary"
                android:padding="16px"
                android:typeface="sans"
                android:textSize="20dip"
                android:textStyle="normal" />

            <RadioGroup
                android:id="@+id/radioSex"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <RadioButton
                    android:id="@+id/radioMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Male"
                    android:checked="true"
                    android:buttonTint="@color/colorPrimary"
                    android:layout_weight="0.30" />

                <RadioButton
                    android:id="@+id/radioFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Female"
                    android:buttonTint="@color/colorPrimary"
                    android:layout_weight="0.30" />

                <RadioButton
                    android:id="@+id/radioTransgender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Transgender"
                    android:buttonTint="@color/colorPrimary"
                    android:layout_weight="0.30" />

            </RadioGroup>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#61616161">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_ID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/ID_no"
                    android:textColor="@color/textcolor" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#61616161">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etxt_fromdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/DOB"
                    android:textColor="@color/textcolor" />


            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/input_hpv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/HPV"
                android:textColor="@color/colorPrimary"
                android:padding="16px"
                android:typeface="sans"
                android:textSize="20dip"
                android:textStyle="normal"/>

            <RadioGroup
                android:id="@+id/hpv"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <RadioButton
                    android:id="@+id/partial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/partial"
                    android:checked="true"
                    android:buttonTint="@color/colorPrimary"
                    android:layout_weight="0.30"/>

                <RadioButton
                    android:id="@+id/yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"
                    android:buttonTint="@color/colorPrimary"
                    android:layout_weight="0.30"/>

                <RadioButton
                    android:id="@+id/no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no"
                    android:buttonTint="@color/colorPrimary"
                    android:layout_weight="0.30"/>

            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#61616161">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_mfl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/MFL"
                    android:textColor="@color/textcolor" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                android:id="@+id/cadre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Cadre"
                android:textColorHint="@color/textcolor"
                app:met_floatingLabel="normal" />

            <TextView
                android:id="@+id/input_partner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/partner"
                android:textColor="@color/colorPrimary"
                android:padding="16px"
                android:typeface="sans"
                android:textSize="20dip"
                android:textStyle="normal"/>

            <CheckBox
                android:id="@+id/EGPAF"
                android:columnCount="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="EGPAF"
                android:checked="true"
                android:buttonTint="@color/colorPrimary">
            </CheckBox>
            <CheckBox
                android:id="@+id/CHS"
                android:columnCount="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="CHS"
                android:buttonTint="@color/colorPrimary">
            </CheckBox>
            <CheckBox
                android:id="@+id/CDC"
                android:columnCount="2"
                android:buttonTint="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="CDC">
            </CheckBox>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#61616161">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Username"
                    android:textColor="@color/textcolor" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#61616161">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_pword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/Password"
                    android:textColor="@color/textcolor" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#61616161">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_cpword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/C_Password"
                    android:textColor="@color/textcolor" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                android:id="@+id/security_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/security_question"
                android:textColorHint="@color/textcolor"
                app:met_floatingLabel="normal" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#61616161">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Hint"
                    android:textColor="@color/textcolor" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#61616161">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_answer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Answer"
                    android:textColor="@color/textcolor" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button android:id="@+id/btn_register"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/Register_Btn"
                android:background="@color/colorPrimary"
                android:layout_marginTop="40dp"
                android:textColor="@android:color/white"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>