<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_report"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/report2">


    <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
        android:id="@+id/exposure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Exposure"
        android:textColorHint="@color/textcolorblack"
        app:met_floatingLabel="normal" />


    <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
        android:id="@+id/cause"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Cause"
        android:textColorHint="@color/textcolorblack"
        app:met_floatingLabel="normal" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="#61616161">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/hours"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/Hours"
            android:textColor="@color/textcolorblack" />
    </android.support.design.widget.TextInputLayout>

    <Button android:id="@+id/btn_submit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Submit"
        android:background="@color/colorPrimary"
        android:layout_marginTop="40dp"
        android:textColor="@android:color/white"/>


</LinearLayout>
